# CSharp-Practice

./: .gitignore  README.md
CSharp/GuessNumber/: GuessNumber.sln
GuessNumber/: Program.cs
QtQuick/TextEditor/: CMakeLists.txt  FileTextEdit.qml  Main.qml  QMLUtils.cpp  QMLUtils.h  main.cpp
QtWidgets/TextEditor/: CMakeLists.txt  FileTextEdit.cpp  FileTextEdit.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
WPF/Calculator/: Calculator.sln  MainWindow.xaml  MainWindow.xaml.cs
WPF/TextEditor/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  TextEditor.sln
WPF/WpfApp1/: MainWindow.xaml  MainWindow.xaml.cs  WpfApp1.sln
